# iqviewer

./: Cargo.toml  README.md  build-macos.sh  build.rs
.cargo/: config.toml
.github/workflows/: release.yml
assets/: icon.rgba
assets/macos/IQViewer.app/Contents/: Info.plist
lib/: README.txt
src/: dirs.rs  icons.rs  items.rs  main.rs  mouse_area.rs  options.rs  plot_ffi.rs  plotarea.rs  watcher.rs
